2011-01-10  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-5.patch: New file. Replace ...
	* binutils-lto-mixed-4.patch: This. Removed.
	* README: Likewise.

2011-01-10  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12380-1.patch: New.
	* README: Apply it.

2011-01-08  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-96.patch: New file. Replace ...
	* binutils-shr-95.patch: This. Removed.
	* README: Likewise.

2011-01-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-4.patch: New file. Replace ...
	* binutils-lto-mixed-3.patch: This. Removed.
	* README: Likewise.

2011-01-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-3.patch: Update PRs.

2011-01-01  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-signed-6.patch: New file. Replace ...
	* binutils-signed-5.patch: This.  Removed.
	* README: Likewise.

2011-01-01  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-95.patch: New file. Replace ...
	* binutils-shr-94.patch: This. Removed.
	* README: Likewise.

2011-01-01  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12356-1.patch: New.
	* README: Apply it.

2010-12-28  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-compress-rel-2.patch: Removed.
	* binutils-pr12327-2.patch: Likewise.
	* README: Updated.

2010-12-17  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12327-2.patch: New file. Replace ...
	* binutils-pr12327-1.patch: This. Removed.
	* README: Likewise.

2010-12-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12327-1.patch: Only make absolute symbol value
	absolute.

2010-12-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12327-1.patch: New.
	* README: Apply it.

2010-12-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-compress-rel-2.patch: New file. Replace ...
	* binutils-compress-rel-1.patch: This. Removed.
	* README: Likewise.

2010-12-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-init-mixed-3.patch: Removed.
	* README: Likewise.

2010-12-14  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-compress-rel-1.patch: New.
	* README: Apply it.
