@@ -1,3 +1,9 @@
+2011-01-12  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-lto-mixed-6.patch: New file. Replace ...
+	* binutils-lto-mixed-5.patch: This. Removed.
+	* README: Likewise.
+
 2011-01-10  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-lto-mixed-5.patch: New file. Replace ...
